hphp/hack/test/typecheck/dynamic/dynamic_subtype.php.exp
File "dynamic_subtype.php", line 4, characters 10-11:
Invalid return type (Typing[4110])
File "dynamic_subtype.php", line 3, characters 44-46:
This is an int
File "dynamic_subtype.php", line 3, characters 21-27:
It is incompatible with a dynamic value
